[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/enemies/puff_puff/down/0.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/puff_puff/down/2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/puff_puff/up/0.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/puff_puff/up/1.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/puff_puff/up/2.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/puff_puff/left/2.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/puff_puff/left/0.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/puff_puff/down/1.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/puff_puff/left/1.png" type="Texture" id=9]
[ext_resource path="res://scripts/enemies/puff_puff.gd" type="Script" id=10]
[ext_resource path="res://assets/enemies/puff_puff/death/0.png" type="Texture" id=11]
[ext_resource path="res://assets/enemies/puff_puff/death/1.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "top",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "death",
"speed": 13.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.99112
height = 1.35876

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.75, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.5, 2.25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1.73645, 2.51777 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.47943
height = 0.0

[node name="Puff Puff" type="KinematicBody2D" groups=[
"enemies",
]]
position = Vector2( 0, -8 )
collision_layer = 2
collision_mask = 44
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.633883, 5.5455 )
shape = SubResource( 2 )

[node name="ChangeDirection" type="Timer" parent="."]
autostart = true

[node name="Detectors" type="Node2D" parent="."]
visible = false

[node name="Up" type="Area2D" parent="Detectors"]
position = Vector2( 0, -6.5 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Up"]
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="Detectors"]
position = Vector2( 10.25, 4.5 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Right"]
shape = SubResource( 4 )

[node name="Left" type="Area2D" parent="Detectors"]
position = Vector2( -10.2045, 5.63388 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Left"]
shape = SubResource( 5 )

[node name="Down" type="Area2D" parent="Detectors"]
position = Vector2( -0.0883884, 14.1313 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Down"]
shape = SubResource( 6 )

[node name="Die" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.571384, 5.40685 )
shape = SubResource( 7 )

[connection signal="timeout" from="ChangeDirection" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Detectors/Up" to="." method="_on_Up_area_entered"]
[connection signal="area_exited" from="Detectors/Up" to="." method="_on_Up_area_exited"]
[connection signal="area_entered" from="Detectors/Right" to="." method="_on_Right_area_entered"]
[connection signal="area_exited" from="Detectors/Right" to="." method="_on_Right_area_exited"]
[connection signal="area_entered" from="Detectors/Left" to="." method="_on_Left_area_entered"]
[connection signal="area_exited" from="Detectors/Left" to="." method="_on_Left_area_exited"]
[connection signal="area_entered" from="Detectors/Down" to="." method="_on_Down_area_entered"]
[connection signal="area_exited" from="Detectors/Down" to="." method="_on_Down_area_exited"]
[connection signal="timeout" from="Die" to="." method="_on_Die_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
